[package]
name = "plonky_block_proof_gen"
description = "Generates block proofs from zero proof IR."
version = "0.1.0"
authors = ["Polygon Zero <bgluth@polygon.technology>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ethereum-types = "0.14.1"
log = "0.4.1"
paste = "1.0.14"
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2.git", rev = "32d009671a1af86312807ba2dc90e9bb4f4a94da" }
plonky2_evm = { git = "https://github.com/0xPolygonZero/plonky2.git", rev = "32d009671a1af86312807ba2dc90e9bb4f4a94da" }
proof_protocol_decoder = { git = "https://github.com/0xPolygonZero/proof-protocol-decoder.git", rev = "982c215c36b6fd7acc82c5098939ff31875bcc47" }
serde = "1.0.166"
